--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   </head>
   <body>
   <p>Testing the first deployment</p>
+  <p>Also this is supposed to be my personal portfolio</p>
   </body>
 </html>
