--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="format.css" />
+    <link rel="stylesheet" href="/assets/imgs/format.css" />
     <h1>Hello World!</h1>
   </head>
   <body>
