--- a/main.html
+++ b/main.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <link rel="stylesheet" href="assets/css/format.css" />
-    <h1>Hello World!</h1>
+    <h1>Hi! This is Cybr</h1> 
+    <img src="assets/imgs/pfp.png" alt="Picture"></img>
   </head>
   <body>
     <p>Testing the first deployment</p>
