--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="assets/css/format.css" />
+    <link rel="stylesheet" href="../assets/css/format.css" />
     <h1>Hi! This is Cybr</h1> 
     <img src="assets/imgs/pfp.png" alt="Picture"></img>
   </head>
