--- a/main.html
+++ b/main.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <link rel="stylesheet" href="../assets/css/format.css" />
-    <h1>Hi! This is Cybr</h1> 
-    <img src="assets/imgs/pfp.png" alt="Picture"></img>
+    <title>Hi! This is Cybr</title> 
   </head>
   <body>
+    <img src="assets/imgs/pfp.png" alt="Picture"></img>
     <p>Testing the first deployment</p>
     <p>Also this is supposed to be my personal portfolio</p>
   </body>
