--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <title>Hi! This is Cybr</title> 
   </head>
   <body>
-    <img src="assets/imgs/pfp.png" alt="Picture"></img>
+    <img src="assets/imgs/pfp.png" alt="Picture">
     <p>Testing the first deployment</p>
     <p>Also this is supposed to be my personal portfolio</p>
   </body>
