--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="../assets/css/format.css" />
+    <link rel="stylesheet" href="assets/css/format.css" />
     <title>Hi! This is Cybr</title> 
   </head>
   <body>
