--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <meta http-equiv="refresh" content="0; URL=https://cybr-code.github.io">
   <head>
     <link rel="stylesheet" href="assets/css/format.css" />
     <title>Hi! This is Cybr</title> 
