--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <meta http-equiv="refresh" content="0; URL=https://cybr-code.github.io">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <head>
     <link rel="stylesheet" href="assets/css/format.css" />
     <title>Hi! This is Cybr</title> 
