Update title and greeting in index.html

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <link rel="stylesheet" href="assets/css/main.css" />
-    <title>Hi! This is Cybr</title> 
+    <title>Cybr's Portfolio</title> 
   </head>
   <body>
     <img src="assets/imgs/pfp.png" alt="Picture">
-    <p>Testing the first deployment</p>
+    <p>Hi! This is Cybr!</p>
     <p>Also this is supposed to be my personal portfolio</p>
   </body>
 </html>
