--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <img src="assets/imgs/pfp.png" alt="Picture">
+    <!-- Also use "https://www.w3schools.com/css/css_navbar_horizontal.asp" for nav -->
     <p>Hi! This is Cybr!</p>
     <p>Also this is supposed to be my personal portfolio</p>
   </body>
