--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
   <body>
     <img src="assets/imgs/pfp.png" alt="Picture">
     <!-- Also use "https://www.w3schools.com/css/css_navbar_horizontal.asp" for nav -->
-    <p>Hi! This is Cybr!</p>
-    <p>Also this is supposed to be my personal portfolio</p>
+    <ul>
+      <li><a href="#message">Message</a></li>
+      <li><a href="#disc">Disc</a></li>
+    </ul>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p id="message">Hi! This is Cybr!</p>
+    <p id="disc">Also this is supposed to be my personal portfolio</p>
   </body>
 </html>
