--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <br>
     <p id="message">Hi! This is Cybr!</p>
     <p id="disc">Also this is supposed to be my personal portfolio</p>
+    <p>I'm kind of messing around with stuff since this is my first time on Github</p>
     <img src="assets/imgs/pfp.png" alt="Picture">
   </body>
 </html>
