Add script tag for hashredirect.js

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <li><a href="#message">Message</a></li>
       <li><a href="#disc">Disc</a></li>
     </ul>
+    <script src="assets/js/hashredirect.js"></script>
     <br>
     <br>
     <br>
